--- a/poker.admin.ui.angular/package.json
+++ b/poker.admin.ui.angular/package.json
@@ -33,6 +33,7 @@
     "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
   },
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "^6.1.0",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
@@ -47,17 +48,21 @@
     "@nebular/security": "2.0.0-rc.9",
     "@nebular/theme": "2.0.0-rc.9",
     "@ng-bootstrap/ng-bootstrap": "^3.2.0",
+    "body-parser": "^1.19.2",
     "bootstrap": "4.0.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "express": "^4.17.3",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "mongoose": "^6.2.5",
     "nebular-icons": "1.0.8",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.3.2",
+    "save": "^2.4.0",
     "socicon": "3.0.5",
     "typeface-exo": "0.0.22",
     "web-animations-js": "2.2.5",
